# depkeeper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  tests.yml
community/: index.html
community/changelog/: index.html
community/code-of-conduct/: index.html
community/faq/: index.html
community/license/: index.html
community/security/: index.html
contributing/: index.html
contributing/code-style/: index.html
contributing/development-setup/: index.html
contributing/release-process/: index.html
contributing/testing/: index.html
depkeeper/: __init__.py  __main__.py  __version__.py  cli.py  config.py  constants.py  context.py  exceptions.py  types.py
depkeeper/commands/: check.py  update.py
depkeeper/core/: __init__.py  checker.py  data_store.py  dependency_analyzer.py  parser.py  updater.py  validator.py
depkeeper/models/: __init__.py  conflict.py  package.py  requirement.py  update_result.py  version.py
depkeeper/strategies/: __init__.py  base.py  filters.py  semver.py
depkeeper/utils/: __init__.py  console.py  filesystem.py  http.py  logger.py  progress.py  version_utils.py
docs/: index.md
docs/community/: changelog.md  code-of-conduct.md  faq.md  index.md  license.md  security.md
docs/contributing/: code-style.md  development-setup.md  index.md  release-process.md  testing.md
docs/getting-started/: basic-usage.md  index.md  installation.md  quickstart.md
docs/guides/: best-practices.md  checking-updates.md  ci-cd-integration.md  configuration.md  dependency-resolution.md  index.md  troubleshooting.md  updating-dependencies.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js
docs/reference/: cli-commands.md  configuration-options.md  exit-codes.md  file-formats.md  index.md  python-api.md
getting-started/: index.html
getting-started/basic-usage/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/best-practices/: index.html
guides/checking-updates/: index.html
guides/ci-cd-integration/: index.html
guides/configuration/: index.html
guides/dependency-resolution/: index.html
guides/troubleshooting/: index.html
guides/updating-dependencies/: index.html
includes/abbreviations/: index.html
reference/: index.html
reference/cli-commands/: index.html
reference/configuration-options/: index.html
reference/exit-codes/: index.html
reference/file-formats/: index.html
reference/python-api/: index.html
scripts/: setup_dev.ps1  setup_dev.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_config.py  test_context.py  test_main.py
tests/e2e/: conftest.py  test_check_command.py  test_cli_flags.py  test_error_handling.py  test_output_formats.py  test_unpinned_versions.py  test_update_command.py
tests/fixtures/: base_requirements.txt  circular_a.txt  circular_b.txt  constraints.txt  empty_requirements.txt  mixed_requirements.txt  nested_base.txt  nested_middle.txt  nested_top.txt  requirements_with_comments.txt  requirements_with_constraints.txt  requirements_with_extras.txt  requirements_with_hashes.txt  requirements_with_include.txt  requirements_with_markers.txt  requirements_with_urls.txt  simple_requirements.txt
tests/integration/: conftest.py  test_conflict_detection.py  test_conflict_resolution.py  test_file_parsing_edge_cases.py  test_parser_to_checker.py  test_pypi_caching.py
tests/test_core/: test_data_store.py
tests/test_models/: test_conflict.py  test_package.py  test_requirement.py
tests/test_utils/: test_console.py  test_filesystem.py  test_http.py  test_logger.py  test_version_utils.py
tests/unit/core/: test_checker.py  test_parser.py
tests/unit/utils/: test_console.py  test_filesystem.py  test_http.py  test_logger.py  test_progress.py  test_version_utils.py
